[package]
name = "gateway_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.20", features = ["derive", "env"] }
reqwest = { version = "0.12.8", features = [
    "json",
    "rustls-tls",
    "charset",
    "http2",
], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
tokio = { version = "1.40.0", features = [ "full" ]}
url = "2.5.2"